--- a/src/app/components/system-settings/system-settings.component.css
+++ b/src/app/components/system-settings/system-settings.component.css
@@ -3,6 +3,7 @@
     background: var(--m-3-sys-light-primary-container, #D7DFFF);
     padding: 12px;
     width: 312px;
+    min-height: 80vh;
 }
 
 h1{
